--- a/app-frontend/src/app/comment-list/comment-list.component.html
+++ b/app-frontend/src/app/comment-list/comment-list.component.html
@@ -1,22 +1,4 @@
-<nav class="navbar">
-    <div class="navbar-left">
-      <a href="main-page.component.html" class="logo"><img src="/images/logo.png" alt="Logo"></a>
-    </div>
-    <div class="navbar-center">
-      <ul>
-        <li><a [routerLink]="['']" ><img src="/images/home.png"> <span>Home</span></a></li>
-        <li><a [routerLink]="['/team-list']"><img src="/images/network.png"> <span>Teams</span></a></li>
-        <li><a [routerLink]="['/project-list']"><img src="/images/jobs.png"> <span>Projects</span></a></li>
-        <li><a [routerLink]="['/comment-list']" class="active-link"><img src="/images/message.png"> <span>Comments</span></a></li>
-        <li><a [routerLink]="['/login']"><img src="/images/notification.png"> <span>Log in</span></a></li>
-      </ul>
-    </div>
-    <div class="navbar-right">
-      <div class="user-structure">
-        <img src="/images/logo.png" class="nav-profile-img" [routerLink]="['/user-view']" alt="Profile">
-      </div>
-    </div>
-</nav>
+<app-nav-bar></app-nav-bar>
 
 <div class="container">
     <div class="main">
