--- a/app-frontend/src/app/team/team-view/team-view.component.scss
+++ b/app-frontend/src/app/team/team-view/team-view.component.scss
@@ -248,6 +248,28 @@ a {
   border-bottom: none;
 }
 
+.profile-actions {
+  margin-top: 50px;
+  
+}
+
+.profile-actions .btn {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #ff0000;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin-right: 5px;
+  margin-left: 5px;
+ 
+}
+
+.profile-actions .btn:hover {
+  background-color: #d10000;
+}
 
 /* Media Queries */
 @media only screen and (max-width: 600px) {
@@ -298,5 +320,30 @@ a {
   .team-details p,
   .team-details ul {
     font-size: 14px;
+  }
+
+  .profile-actions {
+    display: flex;
+ 
+    margin-top: 50px;
+    
+  }
+  
+  .profile-actions .btn {
+  
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #ff0000;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin: 0 10px;
+  }
+  
+  
+  .profile-actions .btn:hover {
+    background-color: #d10000;
   }
 }
