updated task components

--- a/app-frontend/src/app/task/task-view/task-view.component.html
+++ b/app-frontend/src/app/task/task-view/task-view.component.html
@@ -1,2 +1,47 @@
-<p>task-view works!</p>
+
 <!-- tu trzeba będzie dać pojedyńcze zadanie i jego status oraz komentarze i dodawanie komentarzy-->
+<nav class="navbar">
+  <div class="navbar-left">
+    <a href="main-page.component.html" class="logo"><img src="/images/logo.png" alt="Logo"></a>
+  </div>
+  <div class="navbar-center">
+    <ul>
+      <li><a [routerLink]="['']" ><img src="/images/home.png"> <span>Home</span></a></li>
+      <li><a [routerLink]="['/team-list']"><img src="/images/network.png"> <span>Teams</span></a></li>
+      <li><a [routerLink]="['/project-list']" class="active-link"><img src="/images/jobs.png"> <span>Projects</span></a></li>
+      <li><a [routerLink]="['/comment-list']"><img src="/images/message.png"> <span>Comments</span></a></li>
+      <li><a [routerLink]="['/login']"><img src="/images/notification.png"> <span>Log in</span></a></li>
+    </ul>
+  </div>
+  <div class="navbar-right">
+    <div class="user-structure">
+      <img src="/images/logo.png" class="nav-profile-img" [routerLink]="['/user-view']" alt="Profile">
+    </div>
+  </div>
+</nav>
+
+<div class="container">
+  <div class="main">
+      <h1>Task1</h1>
+      <p class="task-description">Desc</p>
+      
+      <div class="comments">
+          <h2>Comments</h2>
+          <ul>
+              <li>comment</li> 
+              
+          </ul>
+      </div>
+  </div>
+  
+  <div class="task-footer">
+      <div class="task-user">
+          <p>The guy</p>
+      </div>
+      <div class="profile-actions">
+        <button class="btn">Finish</button>
+          <button class="btn">Edit</button>
+          <button class="btn">Delete</button>
+      </div>
+  </div>
+</div>
