--- a/app-frontend/src/app/task/task-add/task-add.component.html
+++ b/app-frontend/src/app/task/task-add/task-add.component.html
@@ -1,1 +1,42 @@
-<p>task-add works!</p>
+
+<nav class="navbar">
+  <div class="navbar-left">
+    <a href="main-page.component.html" class="logo"><img src="/images/logo.png" alt="Logo"></a>
+  </div>
+  <div class="navbar-center">
+    <ul>
+      <li><a [routerLink]="['']"><img src="/images/home.png"> <span>Home</span></a></li>
+      <li><a [routerLink]="['/team-list']"><img src="/images/network.png"> <span>Teams</span></a></li>
+      <li><a [routerLink]="['/project-list']" class="active-link"><img src="/images/jobs.png"> <span>Projects</span></a></li>
+      <li><a [routerLink]="['/comment-list']"><img src="/images/message.png"> <span>Comments</span></a></li>
+      <li><a [routerLink]="['/login']"><img src="/images/notification.png"> <span>Log in</span></a></li>
+    </ul>
+  </div>
+  <div class="navbar-right">
+    <div class="user-structure">
+      <img src="/images/logo.png" class="nav-profile-img" [routerLink]="['/user-view']" alt="Profile">
+    </div>
+  </div>
+</nav>
+
+<div class="container">
+  <div class="main">
+      <h1>Add New Task</h1>
+      
+      <label for="task-name">Task Name:</label>
+      <input type="text" id="task-name" class="task-input" placeholder="Enter task name">
+      
+      <label for="task-desc">Description:</label>
+      <textarea id="task-desc" class="task-input" placeholder="Enter task description"></textarea>
+      
+      <label for="assign-user">Assign User:</label>
+      <select id="assign-user" class="task-input">
+          <option value="user1">User 1</option>
+          <option value="user2">User 2</option>
+          <option value="user3">User 3</option>
+      </select>
+      <div class="profile-actions">
+      <button class="btn">Add Task</button>
+    </div>
+  </div>
+</div>
