--- a/app-frontend/src/app/nav-bar/nav-bar.component.scss
+++ b/app-frontend/src/app/nav-bar/nav-bar.component.scss
@@ -82,3 +82,49 @@ position: relative;
   background: #32cd32 ;
   position: absolute;
 }
+
+@media only screen and (max-width: 600px) {
+  
+  .navbar-center ul li a span {
+    display: none;
+  }
+  .navbar-center ul li a {
+    padding-right: 0;
+    margin: 5px;
+  }
+  .nav-profile-img {
+    width: 30px;
+  }
+  .container {
+    padding: 15px 3%;
+  }
+
+  .right-sidebar {
+    flex-basis: 100%;
+    position: relative;
+    top: unset;
+  }
+  .profile-container {
+    font-size: 14px;
+    
+  }
+  .profile-pic {
+    width: 100px;
+    margin-top: -50px;
+  }
+  .profile-description {
+    font-size: 14px;
+  }
+   .main-content {
+    flex-basis: 100%;
+   }
+   .first-sidebar {
+    flex-basis: 100%;
+    position: relative;
+    top: unset;
+   }
+  .main, .first-sidebar {
+    flex-basis: 100%;
+  }
+  
+}
