--- a/app-frontend/src/app/project/project-edit/project-edit.component.scss
+++ b/app-frontend/src/app/project/project-edit/project-edit.component.scss
@@ -396,6 +396,29 @@ a {
     background-color: #d10000;
 }
 
+.profile-actions {
+  margin-top: 20px;
+  
+}
+
+.profile-actions .btn {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #ff0000;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin-right: 5px;
+  margin-left: 5px;
+ 
+}
+
+.profile-actions .btn:hover {
+  background-color: #d10000;
+}
+
 @media only screen and (max-width: 600px) {
     .navbar-center ul li a span {
         display: none;
@@ -427,5 +450,30 @@ a {
     .form-group textarea,
     .form-group button {
         font-size: 16px;
+    }
+
+    .profile-actions {
+      display: flex;
+   
+      margin-top: 20px;
+      
+    }
+    
+    .profile-actions .btn {
+    
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #ff0000;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      margin: 0 10px;
+    }
+    
+    
+    .profile-actions .btn:hover {
+      background-color: #d10000;
     }
 }
