--- a/app-frontend/src/app/task/task-view/task-view.component.scss
+++ b/app-frontend/src/app/task/task-view/task-view.component.scss
@@ -147,6 +147,14 @@ a {
   margin-left: 10px;
 }
 
+.task-input {
+  width: 100%;
+  max-width: 250px;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
 
 .profile-actions {
   margin-top: 50px;
