--- a/app-frontend/src/app/project/project-list/project-list.component.html
+++ b/app-frontend/src/app/project/project-list/project-list.component.html
@@ -4,7 +4,7 @@
     <div class="main">
         <h1>All Projects</h1>
         <div class="profile-actions">
-          <a [routerLink]="['/project-add']" class="btn">Add Project</a>
+          <a (click)="checkPermissions()" class="btn">Add Project</a>
         </div>
         <div class="team-list" id="teams">
             <div class="team" *ngFor="let project of projectData" [routerLink]="[`/project-view/${project.id}`]">
