--- a/app-frontend/src/app/team/team-list/team-list.component.html
+++ b/app-frontend/src/app/team/team-list/team-list.component.html
@@ -4,7 +4,7 @@
   <div class="main">
     <h1>All Teams</h1>
     <div class="profile-actions">
-      <a [routerLink]="['/team-add']" class="btn">Add Team</a>
+      <a (click)="checkPermissions()" class="btn">Add Team</a>
     </div>
     <div class="team-list" id="teams">
       <div class="team" *ngFor="let team of teamData" [routerLink]="[`/team-view/${team.id}`]">
