--- a/app-frontend/src/app/main-page/main-page.component.scss
+++ b/app-frontend/src/app/main-page/main-page.component.scss
@@ -478,6 +478,10 @@ top: 73px;
  justify-content: flex-start;
 }
 
+.checked {
+  color: #555;
+  text-decoration: line-through;
+  }
 
 
 /* -------------------- media query for small screens ------------------- */
