updated main component

--- a/app-frontend/src/app/main-page/main-page.component.scss
+++ b/app-frontend/src/app/main-page/main-page.component.scss
@@ -297,6 +297,7 @@ top: 73px;
 
 .profile-container-inner {
   padding: 0 4% 10px;
+ 
 }
 
 .profile-pic {
@@ -311,6 +312,8 @@ top: 73px;
   font-size: 28px;
   font-weight: 600;
   color: #222;
+  margin: 0 0  20px;
+  
 }
 
 .profile-container b {
