--- a/app-frontend/src/app/project/project-view/project-view.component.html
+++ b/app-frontend/src/app/project/project-view/project-view.component.html
@@ -4,9 +4,9 @@
   </div>
   <div class="navbar-center">
     <ul>
-      <li><a [routerLink]="['']" class="active-link"><img src="/images/home.png"> <span>Home</span></a></li>
+      <li><a [routerLink]="['']" ><img src="/images/home.png"> <span>Home</span></a></li>
       <li><a [routerLink]="['/team-list']"><img src="/images/network.png"> <span>Teams</span></a></li>
-      <li><a [routerLink]="['/project-list']"><img src="/images/jobs.png"> <span>Projects</span></a></li>
+      <li><a [routerLink]="['/project-list']" class="active-link"><img src="/images/jobs.png"> <span>Projects</span></a></li>
       <li><a [routerLink]="['/comment-list']"><img src="/images/message.png"> <span>Comments</span></a></li>
       <li><a [routerLink]="['/login']"><img src="/images/notification.png"> <span>Log in</span></a></li>
     </ul>
