--- a/app-frontend/src/app/task/task-view/task-view.component.html
+++ b/app-frontend/src/app/task/task-view/task-view.component.html
@@ -1,3 +1,4 @@
+
 <app-nav-bar></app-nav-bar>
 
 <div class="container">
@@ -13,7 +14,7 @@
         </li>
       </ul>
       <input [(ngModel)]="newComment" [ngModelOptions]="{standalone: true}" type="text" id="task-name" class="task-input" placeholder="Enter your comment">
-      <div class="profile-actions">
+      <div class="important-btn">
         <button (click)="postComment()" class="btn">Post Comment</button>
       </div>
     </div>
@@ -30,3 +31,4 @@
     </div>
   </div>
 </div>
+
